# NewGrokAnakizer

./: .gitignore  .pre-commit-config.yaml  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_structure.py
config/: .env.example
docker/: Dockerfile  docker-compose.yml  init.sql
docs/: API_REFERENCE.md  DEPLOYMENT.md
scripts/: monitoring.py  run_tests.py  setup_database.py
src/: __init__.py  main.py
src/analyzer/: __init__.py  grok_analyzer.py
src/config/: __init__.py  config_manager.py
src/database/: __init__.py  database_manager.py  models.py
src/publisher/: __init__.py  telegram_publisher.py
src/utils/: __init__.py  exceptions.py  logger.py
tests/: __init__.py  test_analyzer.py  test_config.py  test_database.py  test_publisher.py
